--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.1",
+    "@openzeppelin/contracts": "^5.0.2",
     "express": "^4.19.1",
     "graphql": "^16.8.1"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "hardhat": "^2.22.1"
   }
 }
